The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

1.9 (????-??-??)

* support touch gestures (available on Windows 7 or later)
  (contributed by Robert Prouse)

1.8 (2011-09-18)

* improved support for PDF form text fields
* various minor improvements and crash fixes
* speedup handling some djvu files

1.7 (2011-07-18)

* favorites
* logical page numbers are displayed and used, if a document
  provides them (such as i, ii, iii, etc.)
* allow to restrict SumatraPDF's features with more granularity; see
  http://code.google.com/p/sumatrapdf/source/browse/trunk/docs/sumatrapdfrestrict.ini
* -named-dest also matches strings in table of contents
* improved support for EPS files (requires Ghostscript)
* improved support for right-to-left languages e.g. Arabic
* more robust installer (requires to close programs, like a browser, that
  are using Sumatra components, preventing them from being over-written
  during installation)

1.6 (2011-05-30)

* display Frequently Read list when no document is open
* add support for displaying DjVu documents
* add support for displaying Postscript documents
  (requires a recent Ghostscript installation)
* add support for displaying a folder containing images
  (to display it, drag the folder over SumatraPDF)
* support clickable links and a Table of Content for XPS documents
* optional previewing of PDF documents in Windows Vista and 7 (creates
  thumbnails and displays documents in Explorer's Preview pane)
* display printing progress and allow to cancel it
* add Print toolbar button

1.5.1 (2011-04-27)

* fixes for crashes

1.5 (2011-04-23)

* add support for displaying XPS documents
* add support for displaying CBZ and CBR comic books
* add "Save Shortcut" to create shortcuts to specific places in a document
* add a basic context menu for copying text, link addresses and comments
  (and saving and printing for the browser plugin)