@@ -20,7 +20,7 @@ InternetAccess = 1
 ; * Opening files through dialog
 ; * Saving file or bookmark shortcut
 ; * Opening a web browser after a click on a hyperlink
-; * Launching external PDF viewers or LaTeX source editors
+; * Launching external PDF viewers, LaTeX source editors or media players
 ; * Displaying Frequently Read page (also requires SavePreferences)
 ; * Reopening recently opened files
 DiskAccess = 1
